# liquidchat

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  examples.py  pyproject.toml  pyrightconfig.json
.github/workflows/: ci.yml  release.yml
.pyre/: pyre.stderr
docs/: msa_login_plan.md
examples/: README.md  basic.py  bot.py  moderation.py  mojang.py
src/liquidchat/: __init__.py  client.py  exceptions.py  jwt.py  loopback_probe.py  models.py  mojang.py  persistent.py  protocol.py
src/liquidchat/cli/: __init__.py  _common.py  account.py  chat.py  login.py  mod.py  mojang.py  send.py  token.py
tests/: conftest.py  test_integration.py  test_jwt.py  test_mojang.py  test_mojang_cache_internals.py  test_mojang_respx.py  test_property.py  test_protocol.py  test_reconnect_policy.py
