[project]
name = "liquidchat"
version = "0.1.0"
description = "LiquidChat websocket client library (chat.liquidbounce.net)"
readme = "README.md"
license = { text = "MIT" }
keywords = ["liquidchat", "websocket", "chat", "liquidbounce", "axochat"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet",
    "Typing :: Typed",
]
authors = [
    { name = "clawdbot-silly-waddle", email = "clawdbot-silly-waddle@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.27",
    "websockets>=16.0,<17.0",
]

[project.urls]
Repository = "https://github.com/sokripon/olotldiscordbotnew"
Issues = "https://github.com/sokripon/olotldiscordbotnew/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pyright>=1.1.409",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.13",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.13"
strict = true
warn_unused_ignores = false
