[project]
name = "liquidchat"
version = "0.1.0"
description = "LiquidChat websocket client library (chat.liquidbounce.net)"
readme = "README.md"
license = { text = "MIT" }
keywords = ["liquidchat", "websocket", "chat", "liquidbounce", "axochat"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet",
    "Typing :: Typed",
]
authors = [
    { name = "clawdbot-silly-waddle", email = "clawdbot-silly-waddle@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.8",
    "websockets>=16.0,<17.0",
]

[project.urls]
Repository = "https://github.com/clawdbot-silly-waddle/liquidchat"
Issues = "https://github.com/clawdbot-silly-waddle/liquidchat/issues"
Changelog = "https://github.com/clawdbot-silly-waddle/liquidchat/blob/master/CHANGELOG.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "basedpyright>=1.39.4",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.13",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: tests that require a local axochat_server binary (auto-skipped in CI)",
]

[tool.basedpyright]
include = ["src/liquidchat", "tests", "examples"]
# Tests import 'from tests.conftest import ...'; tell the resolver to
# treat the project root as a search path so that works without an
# __init__.py file (which would interfere with pytest's collection).
extraPaths = ["."]
pythonVersion = "3.13"
# Strict on the published package; tests + examples run in "standard" mode
# via execution environments below.
typeCheckingMode = "standard"
strict = ["src/liquidchat"]
executionEnvironments = [
    { root = "tests", reportPrivateUsage = "none", reportUnknownMemberType = "none", reportUnknownArgumentType = "none", reportUnknownVariableType = "none", reportUnknownParameterType = "none", reportMissingTypeStubs = "none" },
    { root = "examples" },
]
# asyncio.create_task(...) returns we deliberately discard.
reportUnusedCallResult = false
